modificações no html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>React Cheat Sheet</title>
+  <title>ADS Cheat Sheet</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     <img src="img/ads.png" alt="JS Logo" />
   </header>
 
-  <h1>REACT CHEAT SHEET</h1>
+  <h1>ADS CHEAT SHEET</h1>
 
   <div class="container" id="cheat-sheet"></div>
 
