--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="img/ads.png" alt="JS Logo" />
+    <img src="img/ads.jpg" alt="JS Logo" />
   </header>
 
   <h1>ADS CHEAT SHEET</h1>
